Update HomePage-index.css to prevent overflow

--- a/HomePage-index.css
+++ b/HomePage-index.css
@@ -408,7 +408,7 @@ header.scrolled a{
 
     .asiafirst {
         padding: 10px;
-        padding-top: 20rem;
+        padding-top: 5rem;
     }
 
     .asiafirst h2 {
